@@ -1,3 +1,8 @@
+2009-09-17  Michael Matz  <matz@suse.de>
+
+	PR middle-end/41347
+	* gfortran.dg/pr41347.f90: New test.
+
 2009-09-17  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* gcc.c-torture/compile/20090917-1.c: New testcase.
